chore(renovate): group only patch pxc changes

--- a/renovate.json
+++ b/renovate.json
@@ -102,7 +102,6 @@
       "matchPackageNames": [
         "docker.io/percona/haproxy",
         "docker.io/percona/percona-xtradb-cluster-operator",
-        "docker.io/percona/percona-xtradb-cluster",
         "github.com/percona/percona-xtradb-cluster-operator",
         "percona/percona-xtradb-cluster-operator",
         "pxc-operator",
@@ -114,9 +113,13 @@
       "extractVersion": "^v(?<version>.*)$"
     },
     {
+      "enabled": true,
       "matchPackageNames": ["docker.io/percona/percona-xtradb-cluster"],
       "versioning": "semver-coerced",
-      "separateMinorPatch": true
+      "separateMinorPatch": true,
+      "patch": {
+        "groupName": "pxc"
+      }
     }
   ],
   "customManagers": [
