--- a/charts/designate/Chart.yaml
+++ b/charts/designate/Chart.yaml
@@ -1,5 +1,9 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: v1.0.0
+dependencies:
+- name: helm-toolkit
+  repository: file://../helm-toolkit
+  version: '>= 0.1.0'
 description: OpenStack-Helm Designate
 home: https://docs.openstack.org/designate/latest/
 icon: https://www.openstack.org/themes/openstack/images/project-mascots/Designate/OpenStack_Project_Designate_vertical.jpg
@@ -9,4 +13,4 @@ name: designate
 sources:
 - https://opendev.org/openstack/designate
 - https://opendev.org/openstack/openstack-helm
-version: 0.2.9
+version: 2025.1.0+79f92eba2
