Add designate service cleaner job
fixes: #2635
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/charts/designate/templates/configmap-bin.yaml
+++ b/charts/designate/templates/configmap-bin.yaml
@@ -44,6 +44,8 @@ data:
 {{ tuple "bin/_designate-producer.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
   designate-sink.sh: |
 {{ tuple "bin/_designate-sink.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+  designate-service-cleaner.sh: |
+{{ tuple "bin/_designate-service-cleaner.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
   rabbit-init.sh: |
 {{- include "helm-toolkit.scripts.rabbit_init" . | indent 4 }}
 
