Add NeutronOVNACLNotSync alert
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -113,6 +113,7 @@ __neutron_ovn_helm_values:
           type_drivers: flat,vlan,geneve
           tenant_network_types: geneve
   manifests:
+    cron_job_ovn_db_sync: true
     daemonset_dhcp_agent: false
     daemonset_l3_agent: false
     daemonset_metadata_agent: false
