--- a/roles/lvm/tasks/main.yml
+++ b/roles/lvm/tasks/main.yml
@@ -1,31 +1,18 @@
 # Copyright (c) 2025 VEXXHOST, Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License"); you may
-# not use this file except in compliance with the License. You may obtain
-# a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-# License for the specific language governing permissions and limitations
-# under the License.
+# SPDX-License-Identifier: Apache-2.0
 
-- name: Discover lvm devices
+- name: Discover multipath devices
   ansible.builtin.shell: |
-    set -o pipefail
-    /sbin/pvdisplay | awk '/PV Name/ {print $3}' | sed 's/\/dev\///g'
-  register: lvm_devices
-  changed_when: lvm_devices.rc != 0
-  failed_when: false
+    multipath -l -v1
+  register: multipath_devices
+  changed_when: false
 
 - name: Ensure "/etc/lvm" directory
   ansible.builtin.file:
     state: "directory"
     path: "/etc/lvm"
     mode: "0755"
-  when: lvm_devices.rc == 0
+  when: multipath_devices.rc == 0
 
 - name: Update lvm Config
   ansible.builtin.blockinfile:
@@ -37,4 +24,4 @@
     group: "root"
     backup: "yes"
     mode: "0644"
-  when: lvm_devices.rc == 0
+  when: multipath_devices.rc == 0
