feat: switch mysql exporters liveness check to readiness
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/percona_xtradb_cluster/vars/main.yml
+++ b/roles/percona_xtradb_cluster/vars/main.yml
@@ -27,6 +27,10 @@ _percona_xtradb_cluster_spec:
         ports:
           - name: metrics
             containerPort: 9104
+        readinessProbe:
+          httpGet:
+            port: metrics
+            path: /
     nodeSelector:
       openstack-control-plane: enabled
     livenessProbes:
