--- a/charts/openvswitch/templates/daemonset.yaml
+++ b/charts/openvswitch/templates/daemonset.yaml
@@ -219,6 +219,30 @@ It should be handled through lcore and pmd core masks. */}}
             - name: cgroup
               mountPath: /sys/fs/cgroup
 {{- end }}
+{{- if .Values.pod.sidecars.exporter }}
+        - name: exporter
+{{ tuple $envAll "openvswitch_exporter" | include "helm-toolkit.snippets.image" | indent 10 }}
+{{ tuple $envAll $envAll.Values.pod.resources.ovs.exporter | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
+{{ dict "envAll" $envAll "application" "ovs" "container" "exporter" | include "helm-toolkit.snippets.kubernetes_container_security_context" | indent 10 }}
+          ports:
+            - name: metrics
+              containerPort: 9272
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: metrics
+              scheme: HTTP
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: metrics
+              scheme: HTTP
+          volumeMounts:
+            - name: run-openvswitch
+              mountPath: /var/run/openvswitch
+{{- end }}
       volumes:
         - name: pod-tmp
           emptyDir: {}
