--- a/roles/kube_prometheus_stack/vars/main.yml
+++ b/roles/kube_prometheus_stack/vars/main.yml
@@ -551,6 +551,18 @@ _kube_prometheus_stack_helm_values:
           - interval: 60s
             port: metrics
             relabelings: *relabelings_instance_to_pod_name
+      - name: ovs-exporter
+        jobLabel: job
+        namespaceSelector:
+          matchNames:
+            - openstack
+        selector:
+          matchLabels:
+            application: openvswitch
+        podMetricsEndpoints:
+          - interval: 60s
+            port: metrics
+            relabelings: *relabelings_instance_to_node_name
       - name: percona-xtradb-pxc
         jobLabel: app.kubernetes.io/component
         namespaceSelector:
