feat: introduce metrics-server
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -1,16 +1,5 @@
-# Copyright (c) 2024 VEXXHOST, Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License"); you may
-# not use this file except in compliance with the License. You may obtain
-# a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-# License for the specific language governing permissions and limitations
-# under the License.
+# Copyright (c) 2025 VEXXHOST, Inc.
+# SPDX-License-Identifier: Apache-2.0
 
 - hosts: "{{ target | default('all') }}"
   become: true
@@ -78,3 +67,15 @@
       ansible.builtin.package:
         name: unattended-upgrades
         state: absent
+
+- ansible.builtin.import_playbook: atmosphere.common.flux
+  vars:
+    target: controllers
+
+- ansible.builtin.import_playbook: atmosphere.common.metrics_server
+  vars:
+    target: controllers
+    metrics_server_image: "{{ atmosphere_images['metrics_server'] }}"
+    metrics_server_helm_values:
+      nodeSelector:
+        openstack-control-plane: enabled
