--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -140,6 +140,7 @@ _atmosphere_images:
   manila_scheduler: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/manila:{{ atmosphere_release }}"
   manila_share: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/manila:{{ atmosphere_release }}"
   memcached: "{{ atmosphere_image_prefix }}docker.io/library/memcached:1.6.26"
+  metrics_server: "{{ atmosphere_image_prefix }}registry.k8s.io/metrics-server/metrics-server:v0.7.2"
   netoffload: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/netoffload:{{ atmosphere_release }}"
   neutron_bagpipe_bgp: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/neutron:{{ atmosphere_release }}"
   neutron_bgp_dragent: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/neutron:{{ atmosphere_release }}"
