--- a/roles/keycloak/vars/main.yml
+++ b/roles/keycloak/vars/main.yml
@@ -1,26 +1,17 @@
-# Copyright (c) 2022 VEXXHOST, Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License"); you may
-# not use this file except in compliance with the License. You may obtain
-# a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-# License for the specific language governing permissions and limitations
-# under the License.
+# Copyright (c) 2025 VEXXHOST, Inc.
+# SPDX-License-Identifier: Apache-2.0
 
 _keycloak_ingress_annotations:
   cert-manager.io/cluster-issuer: "{{ keycloak_ingress_cluster_issuer }}"
 
 _keycloak_helm_values:
+  usePasswordFiles: false
   # NOTE(fitbeard): https://github.com/bitnami/charts/issues/30850
   # Allow use of non-standard Bitnami image
   global:
     security:
       allowInsecureImages: true
+  replicaCount: 1
   # NOTE(mnaser): These workarounds below are needed to allow the Bitnami Helm chart to work with
   #               the upstream image.
   enableDefaultInitContainers: false
@@ -33,8 +24,6 @@ _keycloak_helm_values:
   extraEnvVars:
     - name: KC_FEATURES
       value: "token-exchange,admin-fine-grained-authz"
-    - name: KC_PROXY
-      value: edge
     - name: KC_DB
       value: mysql
     - name: KC_DB_URL
@@ -46,6 +35,14 @@ _keycloak_helm_values:
         secretKeyRef:
           key: db-password
           name: keycloak-externaldb
+    - name: KC_HOSTNAME
+      value: "https://{{ keycloak_host }}"
+    - name: JAVA_OPTS_APPEND
+      value: "-Djgroups.dns.query=keycloak-headless.{{ keycloak_helm_release_namespace }}.svc"
+    - name: KC_CACHE_STACK
+      value: kubernetes
+    - name: KC_CACHE
+      value: ispn
   command:
     - /opt/keycloak/bin/kc.sh
     - --verbose
@@ -53,7 +50,7 @@ _keycloak_helm_values:
     - --health-enabled=true
     - --http-enabled=true
     - --http-port=8080
-    - --hostname-strict=false
+    - --hostname-strict=true
     - --spi-events-listener-jboss-logging-success-level=info
     - --spi-events-listener-jboss-logging-error-level=warn
     - --transaction-xa-enabled=false
@@ -74,7 +71,18 @@ _keycloak_helm_values:
   postgresql:
     enabled: false
   production: true
-  proxy: edge
+  proxyHeaders: xforwarded
+  cache:
+    enabled: true
+  service:
+    headless:
+      extraPorts:
+        - name: infinispan
+          port: 7800
+          protocol: TCP
+          # NOTE(fitbeard): Name 'discovery' and port 7800 
+          # are hardcoded in a 'statefulset.yaml' template
+          targetPort: discovery
   startupProbe:
     enabled: true
     initialDelaySeconds: 5
