fix: downgrade back to 24.x
Signed-off-by: Tadas Sutkaitis <tadasas@gmail.com>

--- a/charts/keycloak/charts/postgresql/charts/common/Chart.yaml
+++ b/charts/keycloak/charts/postgresql/charts/common/Chart.yaml
@@ -2,11 +2,11 @@ annotations:
   category: Infrastructure
   licenses: Apache-2.0
 apiVersion: v2
-appVersion: 2.30.0
+appVersion: 2.19.3
 description: A Library Helm Chart for grouping common logic between bitnami charts.
   This chart is not deployable by itself.
 home: https://bitnami.com
-icon: https://dyltqmyl993wv.cloudfront.net/downloads/logos/bitnami-mark.png
+icon: https://bitnami.com/downloads/logos/bitnami-mark.png
 keywords:
 - common
 - helper
@@ -18,6 +18,6 @@ maintainers:
   url: https://github.com/bitnami/charts
 name: common
 sources:
-- https://github.com/bitnami/charts/tree/main/bitnami/common
+- https://github.com/bitnami/charts
 type: library
-version: 2.30.0
+version: 2.19.3
