--- a/charts/keycloak/Chart.yaml
+++ b/charts/keycloak/Chart.yaml
@@ -2,18 +2,17 @@ annotations:
   category: DeveloperTools
   images: |
     - name: keycloak
-      image: docker.io/bitnami/keycloak:26.2.4-debian-12-r0
+      image: docker.io/bitnami/keycloak:24.0.5-debian-12-r0
     - name: keycloak-config-cli
-      image: docker.io/bitnami/keycloak-config-cli:6.4.0-debian-12-r6
+      image: docker.io/bitnami/keycloak-config-cli:5.12.0-debian-12-r5
   licenses: Apache-2.0
-  tanzuCategory: application
 apiVersion: v2
-appVersion: 26.2.4
+appVersion: 24.0.5
 dependencies:
 - condition: postgresql.enabled
   name: postgresql
   repository: oci://registry-1.docker.io/bitnamicharts
-  version: 16.x.x
+  version: 15.x.x
 - name: common
   repository: oci://registry-1.docker.io/bitnamicharts
   tags:
@@ -23,7 +22,7 @@ description: Keycloak is a high performance Java-based identity and access manag
   solution. It lets developers add an authentication layer to their applications with
   minimum effort.
 home: https://bitnami.com
-icon: https://dyltqmyl993wv.cloudfront.net/assets/stacks/keycloak/img/keycloak-stack-220x234.png
+icon: https://bitnami.com/assets/stacks/keycloak/img/keycloak-stack-220x234.png
 keywords:
 - keycloak
 - access-management
@@ -33,4 +32,4 @@ maintainers:
 name: keycloak
 sources:
 - https://github.com/bitnami/charts/tree/main/bitnami/keycloak
-version: 24.6.7
+version: 21.4.1
