--- a/charts/keycloak/charts/postgresql/Chart.yaml
+++ b/charts/keycloak/charts/postgresql/Chart.yaml
@@ -2,15 +2,14 @@ annotations:
   category: Database
   images: |
     - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r43
+      image: docker.io/bitnami/os-shell:12-debian-12-r22
     - name: postgres-exporter
-      image: docker.io/bitnami/postgres-exporter:0.17.1-debian-12-r6
+      image: docker.io/bitnami/postgres-exporter:0.15.0-debian-12-r32
     - name: postgresql
-      image: docker.io/bitnami/postgresql:17.4.0-debian-12-r17
+      image: docker.io/bitnami/postgresql:16.3.0-debian-12-r12
   licenses: Apache-2.0
-  tanzuCategory: service
 apiVersion: v2
-appVersion: 17.4.0
+appVersion: 16.3.0
 dependencies:
 - name: common
   repository: oci://registry-1.docker.io/bitnamicharts
@@ -21,7 +20,7 @@ description: PostgreSQL (Postgres) is an open source object-relational database 
   for reliability and data integrity. ACID-compliant, it supports foreign keys, joins,
   views, triggers and stored procedures.
 home: https://bitnami.com
-icon: https://dyltqmyl993wv.cloudfront.net/assets/stacks/postgresql/img/postgresql-stack-220x234.png
+icon: https://bitnami.com/assets/stacks/postgresql/img/postgresql-stack-220x234.png
 keywords:
 - postgresql
 - postgres
@@ -35,4 +34,4 @@ maintainers:
 name: postgresql
 sources:
 - https://github.com/bitnami/charts/tree/main/bitnami/postgresql
-version: 16.6.6
+version: 15.5.2
