--- a/charts/keycloak/charts/postgresql/templates/read/extended-configmap.yaml
+++ b/charts/keycloak/charts/postgresql/templates/read/extended-configmap.yaml
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ printf "%s-extended-configuration" (include "postgresql.v1.readReplica.fullname" .) }}
-  namespace: {{ include "common.names.namespace" . | quote }}
+  namespace: {{ .Release.Namespace | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
     app.kubernetes.io/component: read
   {{- if .Values.commonAnnotations }}
