--- a/charts/keycloak/charts/postgresql/templates/read/metrics-svc.yaml
+++ b/charts/keycloak/charts/postgresql/templates/read/metrics-svc.yaml
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ printf "%s-metrics" (include "postgresql.v1.readReplica.fullname" .) }}
-  namespace: {{ include "common.names.namespace" . | quote }}
+  namespace: {{ .Release.Namespace | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
     app.kubernetes.io/component: metrics-read
   {{- if or .Values.commonAnnotations .Values.metrics.service.annotations }}
