--- a/charts/keycloak/charts/postgresql/templates/read/svc.yaml
+++ b/charts/keycloak/charts/postgresql/templates/read/svc.yaml
@@ -8,12 +8,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "postgresql.v1.readReplica.fullname" . }}
-  namespace: {{ include "common.names.namespace" . | quote }}
-  {{- $labels := .Values.commonLabels }}
-  {{- if .Values.readReplicas.service.labels }}
-  {{- $labels = include "common.tplvalues.merge" ( dict "values" ( list .Values.readReplicas.service.labels $labels ) "context" . ) }}
-  {{- end }}
-  labels: {{- include "common.labels.standard" ( dict "customLabels" $labels "context" $ ) | nindent 4 }}
+  namespace: {{ .Release.Namespace | quote }}
+  labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
     app.kubernetes.io/component: read
   {{- if or .Values.commonAnnotations .Values.readReplicas.service.annotations }}
   {{- $annotations := include "common.tplvalues.merge" ( dict "values" ( list .Values.readReplicas.service.annotations .Values.commonAnnotations ) "context" . ) }}
