--- a/charts/keycloak/templates/metrics-service.yaml
+++ b/charts/keycloak/templates/metrics-service.yaml
@@ -18,20 +18,10 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - name: metrics
-      port: {{ .Values.metrics.service.ports.metrics }}
-      protocol: TCP
-      targetPort: {{ .Values.containerPorts.metrics }}
     - name: http
-      port: {{ .Values.metrics.service.ports.http }}
+      port: {{ coalesce .Values.metrics.service.ports.http .Values.metrics.service.port }}
       protocol: TCP
-      targetPort: {{ .Values.containerPorts.http }}
-    {{- if .Values.tls.enabled }}
-    - name: https
-      port: {{ .Values.metrics.service.ports.https }}
-      protocol: TCP
-      targetPort: {{ .Values.containerPorts.https }}
-    {{- end }}
+      targetPort: http
     {{- if .Values.metrics.service.extraPorts }}
     {{- include "common.tplvalues.render" (dict "value" .Values.metrics.service.extraPorts "context" $) | nindent 4 }}
     {{- end }}      
