test: pin max ansible-core version
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -34,6 +34,7 @@ provisioner:
   config_options:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
+      staregy: serverscom.mitogen.mitogen_linear
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
   options:
