test: set strategy per play
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/playbooks/csi.yml
+++ b/playbooks/csi.yml
@@ -13,6 +13,7 @@
 # under the License.
 
 - hosts: controllers
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: csi
