--- a/playbooks/monitoring.yml
+++ b/playbooks/monitoring.yml
@@ -14,6 +14,7 @@
 
 - name: Deploy Monitoring
   hosts: controllers[0]
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: node_feature_discovery
