--- a/galaxy.yml
+++ b/galaxy.yml
@@ -11,12 +11,12 @@ dependencies:
   ansible.netcommon: 1.2.0
   ansible.posix: 1.3.0
   ansible.utils: 2.9.0
+  cloud.common: ">=4.0.0"
   community.crypto: 2.2.3
   community.general: 7.3.0
   community.mysql: 3.6.0
   kubernetes.core: 2.4.0
   openstack.cloud: ">=2.0.0"
-  serverscom.mitogen: 1.4.0
   vexxhost.ceph: 3.0.1
   vexxhost.kubernetes: ">=2.0.1"
 tags:
