--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-ansible-core>=2.15.9,<2.18.0
+ansible-core>=2.15.9
 jmespath>=1.0.1
 openstacksdk>1
 docker-image-py>=0.1.12
 rjsonnet>=0.5.2
 netaddr>=0.8.0
-mitogen==0.3.23
