feat: upgrade pxc components
Signed-off-by: Tadas Sutkaitis <tadasas@gmail.com>

--- a/roles/percona_xtradb_cluster/vars/main.yml
+++ b/roles/percona_xtradb_cluster/vars/main.yml
@@ -1,5 +1,6 @@
 _percona_xtradb_cluster_spec:
-  crVersion: "1.14.0"
+  crVersion: "1.16.1"
+  enableVolumeExpansion: true
   secretsName: percona-xtradb
   pxc:
     size: 3
@@ -48,7 +49,7 @@ _percona_xtradb_cluster_spec:
     nodeSelector:
       openstack-control-plane: enabled
     # NOTE(fitbeard): The actual default configuration file can be found here:
-    # https://github.com/percona/percona-docker/blob/pxc-operator-1.14.0/haproxy/dockerdir/etc/haproxy/haproxy-global.cfg
+    # https://github.com/percona/percona-docker/blob/pxc-operator-1.16.1/haproxy/dockerdir/etc/haproxy/haproxy-global.cfg
     # Should be aligned with upstream example when bumping chart version
     configuration: |
       global
