feat: change license
Signed-off-by: Tadas Sutkaitis <tadasas@gmail.com>

Signed-off-by: Tadas Sutkaitis <tadasas@gmail.com>

Signed-off-by: Tadas Sutkaitis <tadasas@gmail.com>

--- a/roles/percona_xtradb_cluster/vars/main.yml
+++ b/roles/percona_xtradb_cluster/vars/main.yml
@@ -1,7 +1,10 @@
+# Copyright (c) 2025 VEXXHOST, Inc.
+# SPDX-License-Identifier: Apache-2.0
+
 _percona_xtradb_cluster_spec:
   crVersion: "1.16.1"
-  enableVolumeExpansion: true
   secretsName: percona-xtradb
+  enableVolumeExpansion: true
   pxc:
     size: 3
     image: "{{ atmosphere_images['percona_xtradb_cluster'] | vexxhost.kubernetes.docker_image('ref') }}"
