✨ chore: add neutron targets and update Dockerfiles for new structure
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/renovate.json
+++ b/renovate.json
@@ -154,6 +154,16 @@
     {
       "customType": "regex",
       "fileMatch": [
+        "docker-bake.hcl"
+      ],
+      "matchStrings": [
+        "\"git\" = \"(?<packageName>(.*\/(?<depName>.+\/.+)).git)#(?<currentDigest>.+)\" # renovate: branch=(?<currentValue>.+)"
+      ],
+      "datasourceTemplate": "git-refs"
+    },
+    {
+      "customType": "regex",
+      "fileMatch": [
         "Dockerfile"
       ],
       "matchStrings": [
