✨ ci: add docker login action for harbor registry in CI workflow
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,6 +71,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: depot/setup-action@v1
+      - uses: docker/login-action@v3
+        with:
+          registry: harbor.atmosphere.dev
+          username: ${{ secrets.HARBOR_USERNAME }}
+          password: ${{ secrets.HARBOR_PASSWORD }}
       - uses: depot/bake-action@v1
         id: bake
         with:
