--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -25,7 +25,7 @@
         # - atmosphere-molecule-aio-ovn-bgp-agent
     periodic:
       jobs:
-        - atmosphere-molecule-aio-upgrade-openvswitch:
-        - atmosphere-molecule-aio-upgrade-ovn:
+        - atmosphere-molecule-aio-upgrade-openvswitch
+        - atmosphere-molecule-aio-upgrade-ovn
     vars:
       container_registry: harbor.atmosphere.dev/library
