🔧 chore: add apt-get update step to Molecule action workflow
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/actions/molecule/action.yaml
+++ b/.github/actions/molecule/action.yaml
@@ -25,6 +25,9 @@ runs:
       run: sudo swapoff -a
 
     - shell: bash
+      run: sudo apt-get update
+
+    - shell: bash
       run: |
         sudo mkdir -p /var/lib/etcd
         sudo mount -t tmpfs -o nodev,nosuid,size=512M tmpfs /var/lib/etcd
